--- a/main.css
+++ b/main.css
@@ -50,14 +50,10 @@ main {
 .comment-container {
 	background-color: #eee;
 	border-radius: 3px;
-	padding: 2% 1%;
+	padding: 5px 5px;
 	margin-bottom: 3px;
 }
 
 .post-footer {
 	margin-bottom: 0px;
-}
-
-.comment-user-pic {
-	
 }
